# FamiliePlanner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LOGS.md  PHASE4_TEST_RESULTS.md  PWA_TESTING.md  README.docker.md  README.md  alembic.ini  check_grocery_db.py  commitlint.config.js  docker-compose.production.yml  docker-compose.yml  familieplanner.db  generate_missing_thumbnails.py  hash_password.py  nginx.conf  package.json  prometheus.yml  pyproject.toml  requirements.txt  run.py  seed.py  test_grocery_integration.py  test_grocery_parser.py
.github/: GitHub Copilot Agent Development Standards.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 52a321b44f51_add_sort_order_to_task_lists_and_app_.py  6c2a0b806044_add_indexes_on_fk_and_query_columns.py  (+9 more)
android/: .gitignore  README.md  build.sh  manifest-checksum.txt  twa-manifest.json
app/: auth.py  backup_scheduler.py  config.py  csrf.py  database.py  enums.py  errors.py  logging_config.py  main.py  metrics.py  recurrence_scheduler.py  security.py
app/models/: __init__.py  (+8 more)
docs/: APK_BUILD_GUIDE.md  CACHING.md  CI_SETUP.md  ERROR_HANDLING.md  HTTPS_SETUP.md  MONITORING.md  OFFLINE_SECURITY.md  PHASE4_TEST_RESULTS.md  PWA_TESTING.md  README.docker.md  database.md  grafana-dashboard.json
scripts/: generate-icons.sh  generate-keystore.sh
tests/: conftest.py  test_agenda.py  test_clear_database.py  test_cozi_sync.py  test_error_handling.py  test_family.py  test_family_update_bug.py  test_grocery_integration.py  test_grocery_parser.py  test_meals.py  test_recipes.py  test_recurrence_infinite.py  test_search.py  test_security_headers.py  test_settings.py  test_stats.py  test_tasks.py  test_timezone.py
tools/: breakup_multiday_appointments.py  clean_database.py  cozi_import_advisor.py  cozi_importer.py  generate_missing_thumbnails.py  hash_password.py  list_mealie_recipes.py  run_nightly_backup_once.py  seed.py
(+84 files in other folders)
